(bug 12681) 'new message' bar above the page title
New messages bar should appear above page title, for consistency with
other message boxes

I have choose the place over the sitenotice for Monobook and Vector,
because Modern has it already there. Having it in all at the same place
is the best.

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -91,9 +91,15 @@ pre, .mw-code {
 ** the main content area
 */
 
+.usermessage {
+	font-size: 95%;
+	margin-top: 1em;
+}
+
 #siteNotice {
 	font-size: 95%;
 	padding: 0 0.9em;
+	margin-top: 1em;
 }
 #localNotice {
 	margin: 0;
